<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_grafik"
        android:icon="@drawable/ic_nav_chart"
        android:title="@string/nav_grafik" />
    <item
        android:id="@+id/nav_enerji"
        android:icon="@drawable/ic_nav_energy"
        android:title="@string/nav_enerji" />
    <item
        android:id="@+id/nav_surdurulebilirlik"
        android:icon="@drawable/ic_nav_eco"
        android:title="@string/nav_surdurulebilirlik" />
    <item
        android:id="@+id/nav_ayarlar"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_ayarlar" />
</menu>
