<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bitkicepte.bitkicepteapp.ui.home.HomeFragment"
        android:label="@string/nav_home">
        <action
            android:id="@+id/action_home_to_grafik"
            app:destination="@id/nav_grafik"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_home_to_enerji"
            app:destination="@id/nav_enerji"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_home_to_surdurulebilirlik"
            app:destination="@id/nav_surdurulebilirlik"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_home_to_ayarlar"
            app:destination="@id/nav_ayarlar"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_grafik"
        android:name="com.bitkicepte.bitkicepteapp.ui.grafik.GrafikFragment"
        android:label="@string/nav_grafik">
        <action
            android:id="@+id/action_grafik_to_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left" />
    </fragment>

    <fragment
        android:id="@+id/nav_enerji"
        android:name="com.bitkicepte.bitkicepteapp.ui.enerji.EnerjiFragment"
        android:label="@string/nav_enerji">
        <action
            android:id="@+id/action_enerji_to_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left" />
    </fragment>

    <fragment
        android:id="@+id/nav_surdurulebilirlik"
        android:name="com.bitkicepte.bitkicepteapp.ui.surdurulebilirlik.SurdurulebilirlikFragment"
        android:label="@string/nav_surdurulebilirlik">
        <action
            android:id="@+id/action_surdurulebilirlik_to_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left" />
    </fragment>

    <fragment
        android:id="@+id/nav_ayarlar"
        android:name="com.bitkicepte.bitkicepteapp.ui.ayarlar.AyarlarFragment"
        android:label="@string/nav_ayarlar">
        <action
            android:id="@+id/action_ayarlar_to_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left" />
    </fragment>

</navigation>
